<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="school"
            type="com.example.a20220606_sujanlama_nycschools.model.School" />

        <variable
            name="schoolSAT"
            type="com.example.a20220606_sujanlama_nycschools.model.SchoolSAT" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.schoolDetail.SchoolDetailFragment">


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title_num_of_sat_test_takers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/number_of_test_takers"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_sat" />

        <TextView
            android:id="@+id/tv_num_of_sat_test_takers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{schoolSAT.num_of_sat_test_takers}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_num_of_sat_test_takers"
            app:layout_constraintTop_toTopOf="@+id/title_num_of_sat_test_takers"
            tools:text="24"

            />

        <TextView
            android:id="@+id/title_sat_critical_reading_avg_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/critical_reading_average_score"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_of_sat_test_takers" />

        <TextView
            android:id="@+id/tv_sat_critical_reading_avg_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{schoolSAT.sat_critical_reading_avg_score}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_sat_critical_reading_avg_score"
            app:layout_constraintTop_toTopOf="@+id/title_sat_critical_reading_avg_score"
            tools:text="24" />

        <TextView
            android:id="@+id/title_sat_math_avg_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/math_average_score"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sat_critical_reading_avg_score" />

        <TextView
            android:id="@+id/tv_sat_math_avg_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{schoolSAT.sat_math_avg_score}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_sat_math_avg_score"
            app:layout_constraintTop_toTopOf="@+id/title_sat_math_avg_score"
            tools:text="24" />

        <TextView
            android:id="@+id/title_sat_writing_avg_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/writing_average_score"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sat_math_avg_score" />

        <TextView
            android:id="@+id/tv_sat_writing_avg_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{schoolSAT.sat_writing_avg_score}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/title_sat_writing_avg_score"
            app:layout_constraintTop_toTopOf="@+id/title_sat_writing_avg_score"
            tools:text="24" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sat_writing_avg_score" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="title_sat_writing_avg_score,title_sat_math_avg_score,title_sat_critical_reading_avg_score,title_num_of_sat_test_takers,tv_sat_writing_avg_score,tv_sat_math_avg_score,title_sat,line,tv_num_of_sat_test_takers,tv_sat_critical_reading_avg_score" />

        <TextView
            android:id="@+id/tv_school_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@{school.schoolName}"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_goneMarginTop="16dp"
            tools:text="NYC schools" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{school.schoolEmail}"
            android:textColor="#999"
            app:layout_constraintEnd_toStartOf="@+id/tv_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_school_name"
            tools:text="a@a.com" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{school.phoneNumber}"
            android:textColor="#999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_email"
            app:layout_constraintTop_toTopOf="@+id/tv_email"

            tools:text="123123123" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@{school.overview}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:text="test test" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>